--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
         
             <!-- End page content -->
             <div class="footer"margin-top:25px;padding-right:58px>
-                <a href="https://www.esilv.fr/en/"><img src="png/ESILV.png" width="60" height="60" alt=""/></a>
-                <a href="https://www.unipd.it/en/"><img src="png/UNIPD.png" width="60" height="60" alt=""/></a>
+                <a href="https://www.esilv.fr/en/"><img src="ESILV.png" width="60" height="60" alt=""/></a>
+                <a href="https://www.unipd.it/en/"><img src="UNIPD.png" width="60" height="60" alt=""/></a>
                 <a href="https://www.facebook.com/arman.khosravi" class="fa fa-facebook"></a>
                 <a href="https://twitter.com/ArmanKhosravi3" class="fa fa-twitter"></a>
                 <a href="https://plus.google.com/108729344513071992508" class="fa fa-google"></a>
