--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 <a href="https://www.instagram.com/zirorooy/?hl=en" class="fa fa-instagram"></a>
                 <a href="https://www.pinterest.com/makhosravi/" class="fa fa-pinterest"></a>
                 <a href="https://hatscripts.com/addskype/?m.a.khosravi" class="fa fa-skype"></a>
-                <a href="#" class="fa fa-yahoo"></a>
+                <a href="mailto:makh.khosravi@yahoo.com" class="fa fa-yahoo"></a>
                 
                 
             </div>
