--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
             <div class="w3-container badge" id="badge1">
                 <p>In other words</p>
                 <ul class="w3-ul w3-red">
-                    <li id="sBadge">invisible!</li>
-                    <li id="lBadge">invisible!</li>
-                    <li id="t2Badge">invisible!</li>
-                    <li id="t3Badge">invisible!</li>
-                    <li id="t4Badge">invisible!</li>
-                    <li id="eBadge">invisible!</li>
+                    <li id="sBadge"></li>
+                    <li id="lBadge"></li>
+                    <li id="t2Badge"></li>
+                    <li id="t3Badge"></li>
+                    <li id="t4Badge"></li>
+                    <li id="eBadge"></li>
                     </ul>
             </div>
                     
