--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- Header -->
 <div class="w3-container" style="margin-top:80px">
 <h1 class="w3-xxxlarge" align="center">
-<b>Dirty Pool<br>A full fledge simuilation for selfish mining in Bitcoin</b>
+<b>Dirty Pool<br>A full fledged simuilation for selfish mining in Bitcoin</b>
 </h1>
 </div>
 <!-- Selfish -->
