--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@ So
 <hr style="width:50px;border:5px solid #f04836" class="w3-round">
 
 <div>
-In this webpage you can easily calculate the profitability for any chosen &alpha; and &gamma; and see which strategy performs better in that specific situation. Now let's do the same for the whole range of &alpha; and &gamma;, this gives us a <b>2-dimentional graph</b> to compare the performance of different strategies. Below you can see the expected results from analytical study (<a href="https://arxiv.org/abs/1805.08281"><b>On Profitability of Selfish Mining</b></a>) on the left and the results of our simulation on the right.
+In this webpage you can easily calculate the profitability for any chosen &alpha; and &gamma; and see which strategy performs better in that specific situation. Now let's do the same for the whole range of &alpha; and &gamma;, this gives us a <b>2-dimentional graph</b> to compare the performance of different strategies. Below you can see the expected results from 
+	study (<a href="https://arxiv.org/abs/1805.08281"><b>On Profitability of Selfish Mining</b></a>) on the left and the results of our simulation on the right.
 <br><video width="100%" autoplay muted loop>
 <source src="/Models/3.mp4" type="video/mp4">
 Your browser does not support HTML5 video.
@@ -370,7 +371,7 @@ can be shorter.
 	
 	<div class="row">
   <div class="columnL"><p class="w3-large w3-text-black" style="margin-top:75px"><b>Expected <span style="color: red">Time Before Profitability of Selfish Strategy</span> based on <a href="https://arxiv.org/abs/1805.08281"><b>On Profitability of Selfish Mining</b></a> for propagation factor of 50% (&gamma;=0.50).</b></p></div>
-  <div class="columnR"><img src="/Figures/analytical.jpg" style="width:300px;height:300px;"></div>
+  <div class="columnR"><img src="analytical.jpg" style="width:300px;height:300px;"></div>
 </div>
 	
 	<div class="row">
