--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ can be shorter.
 	
 	<div class="row">
   <div class="columnL"><p class="w3-large w3-text-black" style="margin-top:75px"><b>Expected <span style="color: red">Time Before Profitability of Selfish Strategy</span> based on <a href="https://arxiv.org/abs/1805.08281"><b>On Profitability of Selfish Mining</b></a> for propagation factor of 50% (&gamma;=0.50).</b></p></div>
-  <div class="columnR"><img src="/Figures/analytical.JPG" style="width:300px;height:300px;"></div>
+  <div class="columnR"><img src="Figures/analytical.JPG" style="width:300px;height:300px;"></div>
 </div>
 	
 	<div class="row">
