--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ shares and propagation factors of &gamma;=0.15, &gamma;=0.50 and &gamma;=0.85.
 </div>
 	<div class="row">
   <div class="columnL"><p class="w3-large w3-text-black" style="margin-top:75px"><b>Simulated <span style="color: red">Time Before Profitabilty of All Strategies</span> based on our peer-to-peer network simulation for propagation factor of 50% (&gamma;=0.50).</b></p></div>
-  <div class="columnR"><img src="/Figures/simulation_all.jpg" style="width:300px;height:300px;"></div>
+  <div class="columnR"><img src="Figures/simulation_all.jpg" style="width:300px;height:300px;"></div>
 </div>
 	<div class="row">
   <div class="columnL"><p class="w3-large w3-text-black" style="margin-top:75px"><b>Simulated <span style="color: red">Time Before Profitabilty of All Strategies</span> based on our peer-to-peer network simulation for propagation factor of 85% (&gamma;=0.85).</b></p></div>
